<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="90dp"
    android:background="@color/white"
    tools:context=".controllers.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="16dp"
                android:hint="@string/text_input_hint_nomeFilme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/outline_videocam_24">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/input_nome_filme"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/text_input_hint_nomeFilme"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_cinema"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="16dp"
                android:hint="@string/text_input_hint_cinema"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_nome"
                app:startIconDrawable="@drawable/outline_location_on_24">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/input_cinema"
                    android:layout_width="match_parent"
                    android:hint="@string/text_input_hint_cinema"
                    android:layout_height="60dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/slider_label_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/slider"
                android:text="@string/label_avalicao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_cinema" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                style="@style/MySliderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_label_top" />

            <TextView
                android:id="@+id/slider_label_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/numero_avaliacao"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="16dp"
                android:hint="@string/text_input_layout_data"
                android:labelFor="@+id/dateEditText"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/slider_label_bottom"
                app:startIconDrawable="@drawable/outline_calendar_month_24"
                tools:layout_editor_absoluteX="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSelectedImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:scrollbars="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateEditTextLayout" />

            <Button
                android:id="@+id/btnOpenGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_camera"
                android:drawableTint="@color/white"
                android:text="@string/tirar_foto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvSelectedImages" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_observacoes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/text_input_hint_observacoes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnOpenGallery"
                app:startIconDrawable="@drawable/baseline_edit_note_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_observacoes"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine"
                    android:maxLength="199"
                    android:maxLines="10"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submmit_button"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/text_button_submmit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_observacoes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_wifi" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No internet Connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>